Refactor tracker